Save local changes after build

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myCoolNewSite",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Chromps.github.io/ReactPomodoro",
   "devDependencies": {
     "react-scripts": "0.6.1"
   },
